# djangoBizBuySellScraper

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
bizBuySellScraper/: asgi.py  gitignore  settings.py  urls.py  wsgi.py
scraper/: .env  models.py  mongo_client.py  play_wright_driver_faactory.py  playwright_scraper.py  scraper.py  serializers.py  urls.py  views.py
scraper/utils/: web_driver_factory.py
