[project]
name = "bizbuysellscraper"
version = "0.1.0"
description = ""
authors = [
    {name = "OneEyed-King",email = "crvishal7868@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=5.2,<6.0)",
    "pymongo (>=4.12.0,<5.0.0)",
    "playwright (>=1.51.0,<2.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "camoufox (>=0.4.11,<0.5.0)",
    "python-decouple (>=3.8,<4.0)",
    "selenium (>=4.31.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "setuptools (>=78.1.0,<79.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
